# led-game

./: CMakeLists.txt  README.md  prj.conf
boards/: nrf52840dk_nrf52840.overlay
include/: application.h  board.h  dev.h  displayer.h  enemy.h  node.h  player.h  unit.h
include/command/: adc_read_cmd.h  device_cmd.h  gpio_read_cmd.h  i2c_write_cmd.h  sensor_read_cmd.h  tm1651_write_cmd.h
include/state/: game_set_state.h  game_state.h  service_state.h
include/strategy/: move_strat.h  patrol_strat.h  rand_strat.h
src/: application.c  dev.c  displayer.c  enemy.c  main.c  player.c  unit.c
src/command/: adc_read_cmd.c  device_cmd.c  gpio_read_cmd.c  i2c_write_cmd.c  sensor_read_cmd.c  tm1651_write_cmd.c
src/state/: game_set_state.c  game_state.c  service_state.c
src/strategy/: move_strat.c  patrol_strat.c  rand_strat.c
